Style fixes
* The previous "centre" to "space-between" change was errant; oops!
* Put the single images inside <div>s (like the double one) as this
  appears to solve a lot of layout issues on iOS Safari. It does also make
  the markup more consistent (as well as being more in markup in general).

--- a/landmarks.css
+++ b/landmarks.css
@@ -52,8 +52,6 @@ section.feature:nth-child(even) h2 { color: var(--hla); }
 
 img {
 	max-width: 100%;
-	margin-top: auto;
-	margin-bottom: auto;
 	filter: drop-shadow(0.5em 0.5em 0.5em #999);
 }
 
@@ -75,7 +73,7 @@ footer a { color: var(--words); }
 	section.install ul li {
 		display: flex;
 		flex-direction: column;
-		justify-content: space-between;
+		justify-content: center;
 	}
 
 	section.feature > :first-child { flex: 0 1 40%; }
